# wmnuweather

./: .gitignore  ChangeLog  README.md  README.old  bootstrap  configure.ac  convert.c  die.c  die.h  dock.c  download.c  font.c  forecast.c  metar.c  moon.c  mrf.c  warnings.c  wmweather+.1  wmweather+.c
m4/: Makefile.am  xpm.m4
wmgeneral/: wmgeneral-x11.c  wmgeneral-x11.h
